2009-10-13  Ankit Jain  <jankit@novell.com>

	* ResolveAssemblyReference.cs: Fix warnings.

2009-10-13  Ankit Jain  <jankit@novell.com>

	* ResolveAssemblyReference.cs: Log only unique conflict warnings.

2009-10-12  Ankit Jain  <jankit@novell.com>

	* ResolveAssemblyReference.cs: Remove unnecessary tab in the warning
	messages.

2009-10-12  Ankit Jain  <jankit@novell.com>

	* MSBuild.cs (Execute): Handle build errors.

2009-10-09  Ankit Jain  <jankit@novell.com>

	* Exec.cs (AddCommandLineCommands): Add '/q' for cmd.exe, to
	turn 'echo off'. And make sure the script file on windows, has
	a '.bat' extension, otherwise cmd.exe opens it in a text editor.

2009-10-09  Ankit Jain  <jankit@novell.com>

	Fix bug #545703.
	* Exec.cs (Command): On unix, change CRLF to CR.

2009-10-08  Ankit Jain  <jankit@novell.com>

	* ResolveAssemblyReference.cs: Don't resolve any dependencies for
	assemblies resolved from {PkgConfig}. Honor parent's CopyLocal for
	dependencies.

2009-10-08  Ankit Jain  <jankit@novell.com>

	* MSBuild.cs (Execute): Don't share target output items,
	always create a copy.

2009-10-08  Ankit Jain  <jankit@novell.com>

	* RemoveDuplicates.cs: Use item's ItemSpec as the key.

2009-10-07  Ankit Jain  <jankit@novell.com>

	* ManagedCompiler.cs (HandleTaskExecutionErrors): Log error if
	required.

2009-10-06  Ankit Jain  <jankit@novell.com>

	* Exec.cs (ExecuteTool): Use DeleteTempFile instead of File.Delete
	(HandleTaskExecutionErrors): Log error, if required.
	* MSBuild.cs: Don't log error.
	* Warning.cs: Don't log if @text is empty.

2009-09-29  Ankit Jain  <jankit@novell.com>

	* Exec.cs: Write the commands, which can be multiline,
	to a temporary file, and execute that with "cmd.exe /c"
	on windows and "sh" on non-windows.
	(LogToolCommand): Override, and emit the commands instead
	of the actual args passed to the shell.

2009-09-28  Ankit Jain  <jankit@novell.com>

	* WriteLinesToFiles.cs (Execute): Handle empty list of
	lines.
