@@ -54,6 +54,39 @@ namespace Microsoft.Build.Tasks {
 				path = value;
 			}
 		}
+
+		[Output]
+		public string FrameworkVersion11Path {
+			get {
+				return ToolLocationHelper.GetPathToDotNetFramework (
+						TargetDotNetFrameworkVersion.Version11);
+			}
+		}
+
+		[Output]
+		public string FrameworkVersion20Path {
+			get {
+				return ToolLocationHelper.GetPathToDotNetFramework (
+						TargetDotNetFrameworkVersion.Version20);
+			}
+		}
+
+		[Output]
+		public string FrameworkVersion30Path {
+			get {
+				return ToolLocationHelper.GetPathToDotNetFramework (
+						TargetDotNetFrameworkVersion.Version30);
+			}
+		}
+
+		[Output]
+		public string FrameworkVersion35Path {
+			get {
+				return ToolLocationHelper.GetPathToDotNetFramework (
+						TargetDotNetFrameworkVersion.Version35);
+			}
+		}
+
 	}
 }
 
