@@ -1,3 +1,9 @@
+2009-11-09  Ankit Jain  <jankit@novell.com>
+
+	* xbuild/Microsoft.Common.targets: Set default TargetFrameworkVersion.
+	Replace TargetFrameworkPath with TargetFrameworkDirectories, and set
+	according to the TargetFrameworkVersion.
+
 2009-10-12  Ankit Jain  <jankit@novell.com>
 
 	* xbuild/Microsoft.Common.targets: For referenced projects,
